--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -1,6 +1,10 @@
 [chaotic-aur]
-SigLevel = Optional TrustAll
-Server = https://cdn-mirror.chaotic.cx/$repo/$arch
+SigLevel = Never
+Server = https://builds.garudalinux.org/repos/chaotic-aur/x86_64/
+
+#[chaotic-aur]
+#SigLevel = Never
+#Server = https://cdn-mirror.chaotic.cx/$repo/$arch
 
 #[archlinuxcn]
 #SigLevel = Optional TrustAll
