Update user-repos.conf: Changed chaotic-aur siglevel and sever
Changed  chaotic-aur  siglevel and sever

--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -1,6 +1,10 @@
 [chaotic-aur]
-SigLevel = Never
-Server = https://builds.garudalinux.org/repos/chaotic-aur/x86_64/
+SigLevel = Optional TrustAll
+Server = https://geo-mirror.chaotic.cx/$repo/$arch
+
+#[chaotic-aur]
+#SigLevel = Never
+#Server = https://builds.garudalinux.org/repos/chaotic-aur/x86_64/
 
 #[chaotic-aur]
 #SigLevel = Never
