--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -1,5 +1,5 @@
 [chaotic-aur]
-SigLevel = Optional TrustAll
+SigLevel = TrustAll
 Server = https://geo-mirror.chaotic.cx/$repo/$arch
 
 #[chaotic-aur]
