Update user-repos.conf, Commentd out archcn repo
Commentd out archcn repo

--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -2,9 +2,9 @@
 SigLevel = Never
 Server = https://geo-mirror.chaotic.cx/$repo/$arch
 
-[archlinuxcn]
-SigLevel = Optional TrustAll
-Server = https://repo.archlinuxcn.org/$arch
+#[archlinuxcn]
+#SigLevel = Optional TrustAll
+#Server = https://repo.archlinuxcn.org/$arch
 
 [cfdlad]
 SigLevel = Never
