--- a/manjaro/gnome/profile.conf
+++ b/manjaro/gnome/profile.conf
@@ -66,7 +66,7 @@ addgroups="lp,network,power,wheel,users,storage,input,audio"
 # '/etc/default/useradd': " "
 # userShell              : "/usr/bin/zsh"
 # empty value will not be used
-user_shell="/usr/bin/zsh"
+user_shell="/bin/zsh"
 
 ################# live-session #################
 
@@ -81,7 +81,7 @@ hostname="manjaro-gnome"
 
 # the login shell
 # defaults to bash
-login_shell="/usr/bin/zsh"
+login_shell="/bin/zsh"
 
 # unset defaults to given values
 # names must match systemd service names
