Added andontie-aur repo
[andontie-aur]
Server = https://aur.andontie.net/$arch

--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -2,13 +2,17 @@
 SigLevel = Never
 Server = https://geo-mirror.chaotic.cx/$repo/$arch
 
-#[archlinuxcn]
-#SigLevel = Optional TrustAll
-#Server = https://repo.archlinuxcn.org/$arch
-
 [cfdlad]
 SigLevel = Never
 Server = https://cfdlad.github.io/cfdlad_repo/x86_64
+
+[andontie-aur]
+SigLevel = Never
+Server = https://aur.andontie.net/$arch
+
+#[archlinuxcn]
+#SigLevel = Optional TrustAll
+#Server = https://repo.archlinuxcn.org/$arch
 
 #[online-repo]
 #SigLevel = Never
