updated with new repo

--- a/manjaro/gnome/user-repos.conf
+++ b/manjaro/gnome/user-repos.conf
@@ -10,6 +10,10 @@ Server = https://cfdlad.github.io/cfdlad_repo/x86_64
 SigLevel = Never
 Server = https://aur.andontie.net/$arch
 
+[ivasilev]
+SigLevel = Never
+Server = https://ivasilev.net/pacman/$arch
+
 #[archlinuxcn]
 #SigLevel = Optional TrustAll
 #Server = https://repo.archlinuxcn.org/$arch
